y.output
Terminals unused in grammar

   T_NEQ
   Trip_Quote
   T_Range
   T_List


State 99 conflicts: 2 shift/reduce


Grammar

    0 $accept: StartDebugger $end

    1 $@1: %empty

    2 StartDebugger: $@1 StartParse T_EndOfFile

    3 constant: T_Number
    4         | T_String

    5 term: T_ID
    6     | constant
    7     | list_index

    8 list_index: T_ID T_OB constant T_CB

    9 $@2: %empty

   10 StartParse: finalStatements T_NL $@2 StartParse
   11           | finalStatements T_NL

   12 basic_stmt: pass_stmt
   13           | break_stmt
   14           | import_stmt
   15           | assign_stmt
   16           | arith_exp
   17           | bool_exp
   18           | print_stmt
   19           | return_stmt

   20 arith_exp: term
   21          | arith_exp T_PL arith_exp
   22          | arith_exp T_MN arith_exp
   23          | arith_exp T_ML arith_exp
   24          | arith_exp T_DV arith_exp
   25          | T_OP arith_exp T_CP

   26 bool_exp: bool_term T_Or bool_term
   27         | arith_exp T_LT arith_exp
   28         | bool_term T_And bool_term
   29         | arith_exp T_GT arith_exp
   30         | arith_exp T_ELT arith_exp
   31         | arith_exp T_EGT arith_exp
   32         | arith_exp T_In T_ID
   33         | bool_term

   34 bool_term: bool_factor
   35          | arith_exp T_EQ arith_exp
   36          | T_True
   37          | T_False

   38 bool_factor: T_Not bool_factor
   39            | T_OP bool_exp T_CP

   40 import_stmt: T_Import T_ID

   41 pass_stmt: T_Pass

   42 break_stmt: T_Break

   43 return_stmt: T_Return

   44 assign_stmt: T_ID T_EQL arith_exp
   45            | T_ID T_EQL bool_exp
   46            | T_ID T_EQL func_call
   47            | T_ID T_EQL T_OB T_CB

   48 print_stmt: T_Print T_OP constant T_CP

   49 finalStatements: basic_stmt
   50                | cmpd_stmt
   51                | func_def

   52 cmpd_stmt: if_stmt
   53          | while_stmt

   54 if_stmt: T_If bool_exp T_Cln start_suite
   55        | T_If bool_exp T_Cln start_suite elif_stmts

   56 elif_stmts: else_stmt
   57           | T_Elif bool_exp T_Cln start_suite elif_stmts

   58 else_stmt: T_Else T_Cln start_suite

   59 while_stmt: T_While bool_exp T_Cln start_suite

   60 start_suite: basic_stmt

   61 $@3: %empty

   62 start_suite: T_NL ID $@3 finalStatements suite

   63 suite: T_NL ND finalStatements suite
   64      | T_NL end_suite

   65 $@4: %empty

   66 end_suite: DD $@4 finalStatements

   67 $@5: %empty

   68 end_suite: DD $@5
   69          | %empty

   70 args: T_ID args_list
   71     | %empty

   72 args_list: T_Comma T_ID
   73          | %empty

   74 $@6: %empty

   75 func_def: T_Def T_ID $@6 T_OP args T_CP T_Cln start_suite

   76 func_call: T_ID T_OP args T_CP


Terminals, with rules where they appear

$end (0) 0
error (256)
T_EndOfFile (258) 2
T_Return (259) 43
T_Number (260) 3
T_True (261) 36
T_False (262) 37
T_ID (263) 5 8 32 40 44 45 46 47 70 72 75 76
T_Print (264) 48
T_Cln (265) 54 55 57 58 59 75
T_NL (266) 10 11 62 63 64
T_EQL (267) 44 45 46 47
T_NEQ (268)
T_EQ (269) 35
T_GT (270) 29
T_LT (271) 27
T_EGT (272) 31
T_ELT (273) 30
T_Or (274) 26
T_And (275) 28
T_Not (276) 38
T_In (277) 32
ID (278) 62
ND (279) 63
DD (280) 66 68
T_String (281) 4
Trip_Quote (282)
T_If (283) 54 55
T_Elif (284) 57
T_While (285) 59
T_Else (286) 58
T_Import (287) 40
T_Break (288) 42
T_Pass (289) 41
T_MN (290) 22
T_PL (291) 21
T_DV (292) 24
T_ML (293) 23
T_OP (294) 25 39 48 75 76
T_CP (295) 25 39 48 75 76
T_OB (296) 8 47
T_CB (297) 8 47
T_Def (298) 75
T_Comma (299) 72
T_Range (300)
T_List (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
StartDebugger (48)
    on left: 2, on right: 0
$@1 (49)
    on left: 1, on right: 2
constant (50)
    on left: 3 4, on right: 6 8 48
term (51)
    on left: 5 6 7, on right: 20
list_index (52)
    on left: 8, on right: 7
StartParse (53)
    on left: 10 11, on right: 2 10
$@2 (54)
    on left: 9, on right: 10
basic_stmt (55)
    on left: 12 13 14 15 16 17 18 19, on right: 49 60
arith_exp (56)
    on left: 20 21 22 23 24 25, on right: 16 21 22 23 24 25 27 29 30
    31 32 35 44
bool_exp (57)
    on left: 26 27 28 29 30 31 32 33, on right: 17 39 45 54 55 57 59
bool_term (58)
    on left: 34 35 36 37, on right: 26 28 33
bool_factor (59)
    on left: 38 39, on right: 34 38
import_stmt (60)
    on left: 40, on right: 14
pass_stmt (61)
    on left: 41, on right: 12
break_stmt (62)
    on left: 42, on right: 13
return_stmt (63)
    on left: 43, on right: 19
assign_stmt (64)
    on left: 44 45 46 47, on right: 15
print_stmt (65)
    on left: 48, on right: 18
finalStatements (66)
    on left: 49 50 51, on right: 10 11 62 63 66
cmpd_stmt (67)
    on left: 52 53, on right: 50
if_stmt (68)
    on left: 54 55, on right: 52
elif_stmts (69)
    on left: 56 57, on right: 55 57
else_stmt (70)
    on left: 58, on right: 56
while_stmt (71)
    on left: 59, on right: 53
start_suite (72)
    on left: 60 62, on right: 54 55 57 58 59 75
$@3 (73)
    on left: 61, on right: 62
suite (74)
    on left: 63 64, on right: 62 63
end_suite (75)
    on left: 66 68 69, on right: 64
$@4 (76)
    on left: 65, on right: 66
$@5 (77)
    on left: 67, on right: 68
args (78)
    on left: 70 71, on right: 75 76
args_list (79)
    on left: 72 73, on right: 70
func_def (80)
    on left: 75, on right: 51
$@6 (81)
    on left: 74, on right: 75
func_call (82)
    on left: 76, on right: 46


State 0

    0 $accept: . StartDebugger $end

    $default  reduce using rule 1 ($@1)

    StartDebugger  go to state 1
    $@1            go to state 2


State 1

    0 $accept: StartDebugger . $end

    $end  shift, and go to state 3


State 2

    2 StartDebugger: $@1 . StartParse T_EndOfFile

    T_Return  shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_Import  shift, and go to state 14
    T_Break   shift, and go to state 15
    T_Pass    shift, and go to state 16
    T_OP      shift, and go to state 17
    T_Def     shift, and go to state 18

    constant         go to state 19
    term             go to state 20
    list_index       go to state 21
    StartParse       go to state 22
    basic_stmt       go to state 23
    arith_exp        go to state 24
    bool_exp         go to state 25
    bool_term        go to state 26
    bool_factor      go to state 27
    import_stmt      go to state 28
    pass_stmt        go to state 29
    break_stmt       go to state 30
    return_stmt      go to state 31
    assign_stmt      go to state 32
    print_stmt       go to state 33
    finalStatements  go to state 34
    cmpd_stmt        go to state 35
    if_stmt          go to state 36
    while_stmt       go to state 37
    func_def         go to state 38


State 3

    0 $accept: StartDebugger $end .

    $default  accept


State 4

   43 return_stmt: T_Return .

    $default  reduce using rule 43 (return_stmt)


State 5

    3 constant: T_Number .

    $default  reduce using rule 3 (constant)


State 6

   36 bool_term: T_True .

    $default  reduce using rule 36 (bool_term)


State 7

   37 bool_term: T_False .

    $default  reduce using rule 37 (bool_term)


State 8

    5 term: T_ID .
    8 list_index: T_ID . T_OB constant T_CB
   44 assign_stmt: T_ID . T_EQL arith_exp
   45            | T_ID . T_EQL bool_exp
   46            | T_ID . T_EQL func_call
   47            | T_ID . T_EQL T_OB T_CB

    T_EQL  shift, and go to state 39
    T_OB   shift, and go to state 40

    $default  reduce using rule 5 (term)


State 9

   48 print_stmt: T_Print . T_OP constant T_CP

    T_OP  shift, and go to state 41


State 10

   38 bool_factor: T_Not . bool_factor

    T_Not  shift, and go to state 10
    T_OP   shift, and go to state 42

    bool_factor  go to state 43


State 11

    4 constant: T_String .

    $default  reduce using rule 4 (constant)


State 12

   54 if_stmt: T_If . bool_exp T_Cln start_suite
   55        | T_If . bool_exp T_Cln start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 44
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 45
    bool_exp     go to state 46
    bool_term    go to state 26
    bool_factor  go to state 27


State 13

   59 while_stmt: T_While . bool_exp T_Cln start_suite

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 44
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 45
    bool_exp     go to state 47
    bool_term    go to state 26
    bool_factor  go to state 27


State 14

   40 import_stmt: T_Import . T_ID

    T_ID  shift, and go to state 48


State 15

   42 break_stmt: T_Break .

    $default  reduce using rule 42 (break_stmt)


State 16

   41 pass_stmt: T_Pass .

    $default  reduce using rule 41 (pass_stmt)


State 17

   25 arith_exp: T_OP . arith_exp T_CP
   39 bool_factor: T_OP . bool_exp T_CP

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 44
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 49
    bool_exp     go to state 50
    bool_term    go to state 26
    bool_factor  go to state 27


State 18

   75 func_def: T_Def . T_ID $@6 T_OP args T_CP T_Cln start_suite

    T_ID  shift, and go to state 51


State 19

    6 term: constant .

    $default  reduce using rule 6 (term)


State 20

   20 arith_exp: term .

    $default  reduce using rule 20 (arith_exp)


State 21

    7 term: list_index .

    $default  reduce using rule 7 (term)


State 22

    2 StartDebugger: $@1 StartParse . T_EndOfFile

    T_EndOfFile  shift, and go to state 52


State 23

   49 finalStatements: basic_stmt .

    $default  reduce using rule 49 (finalStatements)


State 24

   16 basic_stmt: arith_exp .
   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   27 bool_exp: arith_exp . T_LT arith_exp
   29         | arith_exp . T_GT arith_exp
   30         | arith_exp . T_ELT arith_exp
   31         | arith_exp . T_EGT arith_exp
   32         | arith_exp . T_In T_ID
   35 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 53
    T_GT   shift, and go to state 54
    T_LT   shift, and go to state 55
    T_EGT  shift, and go to state 56
    T_ELT  shift, and go to state 57
    T_In   shift, and go to state 58
    T_MN   shift, and go to state 59
    T_PL   shift, and go to state 60
    T_DV   shift, and go to state 61
    T_ML   shift, and go to state 62

    $default  reduce using rule 16 (basic_stmt)


State 25

   17 basic_stmt: bool_exp .

    $default  reduce using rule 17 (basic_stmt)


State 26

   26 bool_exp: bool_term . T_Or bool_term
   28         | bool_term . T_And bool_term
   33         | bool_term .

    T_Or   shift, and go to state 63
    T_And  shift, and go to state 64

    $default  reduce using rule 33 (bool_exp)


State 27

   34 bool_term: bool_factor .

    $default  reduce using rule 34 (bool_term)


State 28

   14 basic_stmt: import_stmt .

    $default  reduce using rule 14 (basic_stmt)


State 29

   12 basic_stmt: pass_stmt .

    $default  reduce using rule 12 (basic_stmt)


State 30

   13 basic_stmt: break_stmt .

    $default  reduce using rule 13 (basic_stmt)


State 31

   19 basic_stmt: return_stmt .

    $default  reduce using rule 19 (basic_stmt)


State 32

   15 basic_stmt: assign_stmt .

    $default  reduce using rule 15 (basic_stmt)


State 33

   18 basic_stmt: print_stmt .

    $default  reduce using rule 18 (basic_stmt)


State 34

   10 StartParse: finalStatements . T_NL $@2 StartParse
   11           | finalStatements . T_NL

    T_NL  shift, and go to state 65


State 35

   50 finalStatements: cmpd_stmt .

    $default  reduce using rule 50 (finalStatements)


State 36

   52 cmpd_stmt: if_stmt .

    $default  reduce using rule 52 (cmpd_stmt)


State 37

   53 cmpd_stmt: while_stmt .

    $default  reduce using rule 53 (cmpd_stmt)


State 38

   51 finalStatements: func_def .

    $default  reduce using rule 51 (finalStatements)


State 39

   44 assign_stmt: T_ID T_EQL . arith_exp
   45            | T_ID T_EQL . bool_exp
   46            | T_ID T_EQL . func_call
   47            | T_ID T_EQL . T_OB T_CB

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 66
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17
    T_OB      shift, and go to state 67

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 68
    bool_exp     go to state 69
    bool_term    go to state 26
    bool_factor  go to state 27
    func_call    go to state 70


State 40

    8 list_index: T_ID T_OB . constant T_CB

    T_Number  shift, and go to state 5
    T_String  shift, and go to state 11

    constant  go to state 71


State 41

   48 print_stmt: T_Print T_OP . constant T_CP

    T_Number  shift, and go to state 5
    T_String  shift, and go to state 11

    constant  go to state 72


State 42

   39 bool_factor: T_OP . bool_exp T_CP

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 44
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 45
    bool_exp     go to state 50
    bool_term    go to state 26
    bool_factor  go to state 27


State 43

   38 bool_factor: T_Not bool_factor .

    $default  reduce using rule 38 (bool_factor)


State 44

    5 term: T_ID .
    8 list_index: T_ID . T_OB constant T_CB

    T_OB  shift, and go to state 40

    $default  reduce using rule 5 (term)


State 45

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   27 bool_exp: arith_exp . T_LT arith_exp
   29         | arith_exp . T_GT arith_exp
   30         | arith_exp . T_ELT arith_exp
   31         | arith_exp . T_EGT arith_exp
   32         | arith_exp . T_In T_ID
   35 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 53
    T_GT   shift, and go to state 54
    T_LT   shift, and go to state 55
    T_EGT  shift, and go to state 56
    T_ELT  shift, and go to state 57
    T_In   shift, and go to state 58
    T_MN   shift, and go to state 59
    T_PL   shift, and go to state 60
    T_DV   shift, and go to state 61
    T_ML   shift, and go to state 62


State 46

   54 if_stmt: T_If bool_exp . T_Cln start_suite
   55        | T_If bool_exp . T_Cln start_suite elif_stmts

    T_Cln  shift, and go to state 73


State 47

   59 while_stmt: T_While bool_exp . T_Cln start_suite

    T_Cln  shift, and go to state 74


State 48

   40 import_stmt: T_Import T_ID .

    $default  reduce using rule 40 (import_stmt)


State 49

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   25          | T_OP arith_exp . T_CP
   27 bool_exp: arith_exp . T_LT arith_exp
   29         | arith_exp . T_GT arith_exp
   30         | arith_exp . T_ELT arith_exp
   31         | arith_exp . T_EGT arith_exp
   32         | arith_exp . T_In T_ID
   35 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 53
    T_GT   shift, and go to state 54
    T_LT   shift, and go to state 55
    T_EGT  shift, and go to state 56
    T_ELT  shift, and go to state 57
    T_In   shift, and go to state 58
    T_MN   shift, and go to state 59
    T_PL   shift, and go to state 60
    T_DV   shift, and go to state 61
    T_ML   shift, and go to state 62
    T_CP   shift, and go to state 75


State 50

   39 bool_factor: T_OP bool_exp . T_CP

    T_CP  shift, and go to state 76


State 51

   75 func_def: T_Def T_ID . $@6 T_OP args T_CP T_Cln start_suite

    $default  reduce using rule 74 ($@6)

    $@6  go to state 77


State 52

    2 StartDebugger: $@1 StartParse T_EndOfFile .

    $default  reduce using rule 2 (StartDebugger)


State 53

   35 bool_term: arith_exp T_EQ . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 79


State 54

   29 bool_exp: arith_exp T_GT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 80


State 55

   27 bool_exp: arith_exp T_LT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 81


State 56

   31 bool_exp: arith_exp T_EGT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 82


State 57

   30 bool_exp: arith_exp T_ELT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 83


State 58

   32 bool_exp: arith_exp T_In . T_ID

    T_ID  shift, and go to state 84


State 59

   22 arith_exp: arith_exp T_MN . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 85


State 60

   21 arith_exp: arith_exp T_PL . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 86


State 61

   24 arith_exp: arith_exp T_DV . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 87


State 62

   23 arith_exp: arith_exp T_ML . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 88


State 63

   26 bool_exp: bool_term T_Or . bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 44
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 89
    bool_term    go to state 90
    bool_factor  go to state 27


State 64

   28 bool_exp: bool_term T_And . bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 44
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    arith_exp    go to state 89
    bool_term    go to state 91
    bool_factor  go to state 27


State 65

   10 StartParse: finalStatements T_NL . $@2 StartParse
   11           | finalStatements T_NL .

    T_EndOfFile  reduce using rule 11 (StartParse)
    $default     reduce using rule 9 ($@2)

    $@2  go to state 92


State 66

    5 term: T_ID .
    8 list_index: T_ID . T_OB constant T_CB
   76 func_call: T_ID . T_OP args T_CP

    T_OP  shift, and go to state 93
    T_OB  shift, and go to state 40

    $default  reduce using rule 5 (term)


State 67

   47 assign_stmt: T_ID T_EQL T_OB . T_CB

    T_CB  shift, and go to state 94


State 68

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   27 bool_exp: arith_exp . T_LT arith_exp
   29         | arith_exp . T_GT arith_exp
   30         | arith_exp . T_ELT arith_exp
   31         | arith_exp . T_EGT arith_exp
   32         | arith_exp . T_In T_ID
   35 bool_term: arith_exp . T_EQ arith_exp
   44 assign_stmt: T_ID T_EQL arith_exp .

    T_EQ   shift, and go to state 53
    T_GT   shift, and go to state 54
    T_LT   shift, and go to state 55
    T_EGT  shift, and go to state 56
    T_ELT  shift, and go to state 57
    T_In   shift, and go to state 58
    T_MN   shift, and go to state 59
    T_PL   shift, and go to state 60
    T_DV   shift, and go to state 61
    T_ML   shift, and go to state 62

    $default  reduce using rule 44 (assign_stmt)


State 69

   45 assign_stmt: T_ID T_EQL bool_exp .

    $default  reduce using rule 45 (assign_stmt)


State 70

   46 assign_stmt: T_ID T_EQL func_call .

    $default  reduce using rule 46 (assign_stmt)


State 71

    8 list_index: T_ID T_OB constant . T_CB

    T_CB  shift, and go to state 95


State 72

   48 print_stmt: T_Print T_OP constant . T_CP

    T_CP  shift, and go to state 96


State 73

   54 if_stmt: T_If bool_exp T_Cln . start_suite
   55        | T_If bool_exp T_Cln . start_suite elif_stmts

    T_Return  shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 97
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_Import  shift, and go to state 14
    T_Break   shift, and go to state 15
    T_Pass    shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    basic_stmt   go to state 98
    arith_exp    go to state 24
    bool_exp     go to state 25
    bool_term    go to state 26
    bool_factor  go to state 27
    import_stmt  go to state 28
    pass_stmt    go to state 29
    break_stmt   go to state 30
    return_stmt  go to state 31
    assign_stmt  go to state 32
    print_stmt   go to state 33
    start_suite  go to state 99


State 74

   59 while_stmt: T_While bool_exp T_Cln . start_suite

    T_Return  shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 97
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_Import  shift, and go to state 14
    T_Break   shift, and go to state 15
    T_Pass    shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 19
    term         go to state 20
    list_index   go to state 21
    basic_stmt   go to state 98
    arith_exp    go to state 24
    bool_exp     go to state 25
    bool_term    go to state 26
    bool_factor  go to state 27
    import_stmt  go to state 28
    pass_stmt    go to state 29
    break_stmt   go to state 30
    return_stmt  go to state 31
    assign_stmt  go to state 32
    print_stmt   go to state 33
    start_suite  go to state 100


State 75

   25 arith_exp: T_OP arith_exp T_CP .

    $default  reduce using rule 25 (arith_exp)


State 76

   39 bool_factor: T_OP bool_exp T_CP .

    $default  reduce using rule 39 (bool_factor)


State 77

   75 func_def: T_Def T_ID $@6 . T_OP args T_CP T_Cln start_suite

    T_OP  shift, and go to state 101


State 78

   25 arith_exp: T_OP . arith_exp T_CP

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 44
    T_String  shift, and go to state 11
    T_OP      shift, and go to state 78

    constant    go to state 19
    term        go to state 20
    list_index  go to state 21
    arith_exp   go to state 102


State 79

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   35 bool_term: arith_exp T_EQ arith_exp .

    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 35 (bool_term)


State 80

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   29 bool_exp: arith_exp T_GT arith_exp .

    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 29 (bool_exp)


State 81

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   27 bool_exp: arith_exp T_LT arith_exp .

    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 27 (bool_exp)


State 82

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   31 bool_exp: arith_exp T_EGT arith_exp .

    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 31 (bool_exp)


State 83

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   30 bool_exp: arith_exp T_ELT arith_exp .

    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 30 (bool_exp)


State 84

   32 bool_exp: arith_exp T_In T_ID .

    $default  reduce using rule 32 (bool_exp)


State 85

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   22          | arith_exp T_MN arith_exp .
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp

    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 22 (arith_exp)


State 86

   21 arith_exp: arith_exp . T_PL arith_exp
   21          | arith_exp T_PL arith_exp .
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp

    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62

    $default  reduce using rule 21 (arith_exp)


State 87

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   24          | arith_exp T_DV arith_exp .

    $default  reduce using rule 24 (arith_exp)


State 88

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   23          | arith_exp T_ML arith_exp .
   24          | arith_exp . T_DV arith_exp

    $default  reduce using rule 23 (arith_exp)


State 89

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   35 bool_term: arith_exp . T_EQ arith_exp

    T_EQ  shift, and go to state 53
    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62


State 90

   26 bool_exp: bool_term T_Or bool_term .

    $default  reduce using rule 26 (bool_exp)


State 91

   28 bool_exp: bool_term T_And bool_term .

    $default  reduce using rule 28 (bool_exp)


State 92

   10 StartParse: finalStatements T_NL $@2 . StartParse

    T_Return  shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_Not     shift, and go to state 10
    T_String  shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_Import  shift, and go to state 14
    T_Break   shift, and go to state 15
    T_Pass    shift, and go to state 16
    T_OP      shift, and go to state 17
    T_Def     shift, and go to state 18

    constant         go to state 19
    term             go to state 20
    list_index       go to state 21
    StartParse       go to state 103
    basic_stmt       go to state 23
    arith_exp        go to state 24
    bool_exp         go to state 25
    bool_term        go to state 26
    bool_factor      go to state 27
    import_stmt      go to state 28
    pass_stmt        go to state 29
    break_stmt       go to state 30
    return_stmt      go to state 31
    assign_stmt      go to state 32
    print_stmt       go to state 33
    finalStatements  go to state 34
    cmpd_stmt        go to state 35
    if_stmt          go to state 36
    while_stmt       go to state 37
    func_def         go to state 38


State 93

   76 func_call: T_ID T_OP . args T_CP

    T_ID  shift, and go to state 104

    $default  reduce using rule 71 (args)

    args  go to state 105


State 94

   47 assign_stmt: T_ID T_EQL T_OB T_CB .

    $default  reduce using rule 47 (assign_stmt)


State 95

    8 list_index: T_ID T_OB constant T_CB .

    $default  reduce using rule 8 (list_index)


State 96

   48 print_stmt: T_Print T_OP constant T_CP .

    $default  reduce using rule 48 (print_stmt)


State 97

   62 start_suite: T_NL . ID $@3 finalStatements suite

    ID  shift, and go to state 106


State 98

   60 start_suite: basic_stmt .

    $default  reduce using rule 60 (start_suite)


State 99

   54 if_stmt: T_If bool_exp T_Cln start_suite .
   55        | T_If bool_exp T_Cln start_suite . elif_stmts

    T_Elif  shift, and go to state 107
    T_Else  shift, and go to state 108

    T_Elif    [reduce using rule 54 (if_stmt)]
    T_Else    [reduce using rule 54 (if_stmt)]
    $default  reduce using rule 54 (if_stmt)

    elif_stmts  go to state 109
    else_stmt   go to state 110


State 100

   59 while_stmt: T_While bool_exp T_Cln start_suite .

    $default  reduce using rule 59 (while_stmt)


State 101

   75 func_def: T_Def T_ID $@6 T_OP . args T_CP T_Cln start_suite

    T_ID  shift, and go to state 104

    $default  reduce using rule 71 (args)

    args  go to state 111


State 102

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   25          | T_OP arith_exp . T_CP

    T_MN  shift, and go to state 59
    T_PL  shift, and go to state 60
    T_DV  shift, and go to state 61
    T_ML  shift, and go to state 62
    T_CP  shift, and go to state 75


State 103
